--- a/front-end/sidepanel.html
+++ b/front-end/sidepanel.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Bookmarks</title>
-</head>
-<body>
-  <ul id="bookmark-list"></ul>
-  <script src="sidepanel.js"></script>
-</body>
+  <head>
+
+    <title>Dictionary Side Panel</title>
+  </head>
+  <body>
+    <div id="bookmarks"></div>
+
+    <script src="sidepanel.js"></script>
+  </body>
 </html>
