--- a/front-end/sidepanel.html
+++ b/front-end/sidepanel.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-
+    <link rel="stylesheet" type="text/css" href="sidepanel.css">
     <title>Dictionary Side Panel</title>
   </head>
   <body>
