--- a/front-end/sidepanel.html
+++ b/front-end/sidepanel.html
@@ -4,6 +4,11 @@
     <title>Dictionary Side Panel</title>
   </head>
   <body>
+    <input type="text" id="searchInput" placeholder="Search bookmarks">
+    <button id="searchButton">Search</button>
+    <ul id="bookmarksList">
+      <!-- ここに検索結果が追加されます -->
+    </ul>
     <div id="bookmarks"></div>
 
     <script src="sidepanel.js"></script>
