--- a/front-end/sidepanel.html
+++ b/front-end/sidepanel.html
@@ -1,11 +1,16 @@
-<html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="sidepanel.css">
-    <title>Dictionary Side Panel</title>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="sidepanel.css">
+  <title>bookmark AI</title>
+</head>
+<body>
+  
     <input type="text" id="searchInput" placeholder="Search bookmarks">
     <button id="searchButton">Search</button>
+    <button id="arrangeButton">ブックマークを整理</button>
     <ul id="bookmarksList">
       <!-- ここに検索結果が追加されます -->
     </ul>
