--- a/front-end/sidepanel.html
+++ b/front-end/sidepanel.html
@@ -7,10 +7,13 @@
   <title>bookmark AI</title>
 </head>
 <body>
+  <div class="searchInput">
+    <input type="text" id="searchInput" placeholder="検索">
+  </div>
   
-    <input type="text" id="searchInput" placeholder="Search bookmarks">
+
   
-    <button id="arrangeButton">ブックマークを整理</button>
+    <button id="arrangeButton">整理</button>
     <ul id="bookmarksList">
       <!-- ここに検索結果が追加されます -->
     </ul>
