--- a/front-end/sidepanel.html
+++ b/front-end/sidepanel.html
@@ -7,6 +7,7 @@
   <title>bookmark AI</title>
 </head>
 <body>
+  <button id="createFolder">フォルダ作成</button>
   <div class="searchInput">
     <input type="text" id="searchInput" placeholder="検索">
   </div>
@@ -20,5 +21,6 @@
     <div id="bookmarks"></div>
 
     <script src="sidepanel.js"></script>
+    <script src="event.js"></script>
   </body>
 </html>
