プラスボタン

--- a/front-end/sidepanel.html
+++ b/front-end/sidepanel.html
@@ -5,9 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="sidepanel.css">
   <title>bookmark AI</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
 </head>
 <body>
-  <button id="createFolder">フォルダ作成</button>
+  
+    <span class="material-symbols-outlined" id="createFolder">
+      add_circle
+      </span>
+
+
+
   <div class="searchInput">
     <input type="text" id="searchInput" placeholder="検索">
   </div>
