--- a/front-end/sidepanel.html
+++ b/front-end/sidepanel.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="sidepanel.css">
   <title>bookmark AI</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
 </head>
 <body>
   
